refactorizando codigo para que sea mas legible

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -26,7 +26,13 @@
                                     <label for="Email" class=" fw-bold me-4 pe-0">Your E-mail</label>
                                     </div>
                                     <div class="col pe-0">
-                                        <input type="email" class="form-control w-100" id="Email" placeholder="Your Email" required>
+                                        <input 
+                                            type="email" 
+                                            class="form-control w-100" 
+                                            id="Email" 
+                                            placeholder="Your Email" 
+                                            required
+                                        >
                                     </div>
                                 </div>
                                 <div class="row w-100 mt-3 pe-0 me-0">
@@ -35,16 +41,16 @@
                                     </div>
                                     <div class="col pe-0">
                                         <textarea name="mes" 
-                                        id="message" 
-                                        class=" form-control w-100 pe-0 " 
-                                        rows="5"
-                                        ></textarea>
+                                            id="message" 
+                                            class=" form-control w-100 pe-0 " 
+                                            rows="5"
+                                        >
                                     </div>
                                 </div>
                                 <div class="text-end mt-2 me-2">
                                     <button 
-                                    class="btn btn-primary"
-                                    type="submit"
+                                        class="btn btn-primary"
+                                        type="submit"
                                     >
                                     Submit
                                 </button>
