--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -44,7 +44,7 @@
                                             id="message" 
                                             class=" form-control w-100 pe-0 " 
                                             rows="5"
-                                        >
+                                        ></textarea>
                                     </div>
                                 </div>
                                 <div class="text-end mt-2 me-2">
